# ParaCADis

./: .clang-format  .clang-format_h  .clangd  .gitattributes  .gitignore  README.md  buildfile  meson.build  packages.manifest  repositories.manifest
libparacadis/base/data_description/: Description.cpp  GateTranslator.cpp  GateTranslator.h  README.md  buildifle  meson.build
libparacadis/base/expected_behaviour/: CycleGuard.h  JustLockPtr.h  SelfShared.hpp  SharedPtr.h  buildifle  meson.build
libparacadis/base/geometric_primitives/: DocumentGeometry.cpp  DocumentGeometry.h  buildifle  checks.cpp  circles_translation.cpp  deferenceables.cpp  exceptions.cpp  exceptions.h  lines.cpp  lines_description.h  lines_translation.h  meson.build  power_cast.h  spheres.cpp  spheres.h  spheres_translation.cpp  spheres_translation.h  types.h
libparacadis/base/geometric_primitives/coordinate_system/: DeferenceableCoordinateSystem.cpp
libparacadis/base/geometric_primitives/python_bindings/: circles.cpp  coordinate_systems.cpp  lines.cpp  module.cpp  points.cpp  spheres.cpp  vectors.cpp
libparacadis/base/threads/locks/: LockPolicy.cpp  LockPolicy.h  MutexData.cpp  NewThreadLock.h  PolicyProxy.h  YesItIsAMutex.cpp  buildifle  exceptions.cpp  meson.build  writer_locks.cpp  writer_locks.h
libparacadis/base/threads/safe_structs/: MultiIndexContainer.h  MultiIndexContainer_inl.h  ThreadSafeContainer.h  ThreadSafeMap.h  ThreadSafeQueue.h  ThreadSafeSharedPtr.h  ThreadSafeStruct.hpp  ThreadSafeVector.h  buildifle  meson.build
libparacadis/base/xml/: buildifle  meson.build
libparacadis/base/xml/streams/: Reader.cpp  Writer.cpp
libparacadis/libparacadis/scene_graph/: CameraWrapper.h  ContainerNode.cpp  ContainerNode.h  MeshNode.cpp  MeshNode.h  README.md  RenderingScope.cpp  RenderingScope.h  SceneRoot.cpp  SceneRoot.h  buildfile  forwards.h  meson.build
libparacadis/libparacadis/scene_graph/python_bindings/: rendering_scope.cpp  scene.cpp
libparacadis/misc/imgui/: ImGuiDialog.h  ImGuiElement.h  ImGuiElement.hpp  meson.build
libparacadis/misc/imgui/python_bindings/: imgui_scope.cpp  imgui_scope.h  module.cpp
src/: meson.build  misplaced_constants.h
src/base/: exceptions.cpp  exceptions.h  meson.build
src/base/coordinate_system/: meson.build
src/base/data_description/: DataTranslator.cpp  DataTranslator.h  DataWithDescription.cpp  DataWithDescription.h  DataWithDescription.hpp  Description.h  Description.hpp  GateTranslator.cpp  GateTranslator.h  GateTranslator.hpp  README.md  meson.build
src/base/document_tree/: Container.cpp  Container.h  DocumentTree.cpp  DocumentTree.h  exceptions.cpp  exceptions.h  meson.build  path_cache_policies.cpp  path_cache_policies.h
src/base/document_tree/python_bindings/: meson.build  module.cpp  module.h
src/base/document_tree/tests/: Container.cpp  DocumentTree.cpp  container_construction.hpp  container_nested.hpp  container_populate.hpp  container_transform.hpp  meson.build
src/base/expected_behaviour/: AtomicHolder.h  AtomicHolder.hpp  AtomicSharedPtr.h  CycleGuard.h  CycleGuard.hpp  JustLockPtr.cpp  SelfShared.h  SelfShared.hpp  SharedFromThis.h  SharedPtr.cpp  SharedPtr.h  SharedPtr.hpp  SharedPtrWrap.h  SharedPtr_impl.h  meson.build
src/base/geometric_primitives/: CoordinateSystem.cpp  CoordinateSystem.h  CoordinateSystems.cpp  DeferenceablePoint.h  DocumentGeometry.cpp  DocumentGeometry.h  GeometricObject.cpp  GeometricObject.h  all_translators.h  checks.cpp  checks.h  circles.cpp  circles.h  circles_description.h  circles_translation.cpp  circles_translation.h  deferenceables.cpp  deferenceables.h  deferenceables_description.h  deferenceables_translation.cpp  deferenceables_translation.h  exceptions.cpp  exceptions.h  lines.cpp  lines.h  lines_description.h  lines_translation.h  meson.build  power_cast.h  spheres.cpp  spheres.h  spheres_description.h  spheres_translation.cpp  spheres_translation.h  types.cpp  types.h
src/base/mesh_provider/: LineMesh.h  MeshProvider.h  MeshProvider_impl.h  mesh_circles.cpp  mesh_circles.h  mesh_lines.cpp  mesh_lines.h  meson.build
src/base/naming/: Exporter.cpp  IExport.hpp  NameSearch.h  NameSearch.hpp  PathToObject.cpp  PathToken.cpp  README.md  Uuid.h  exceptions.cpp  exceptions.h  meson.build  path_cache_policies.hpp  types.h
src/base/naming_scheme/: Chainable.h  Chainable.hpp  Chainables.h  Chainables_impl.h  Exporter.cpp  Exporter.h  Exporter_impl.h  IExport.h  IExport.hpp  IExport_impl.h  NameAndUuid.cpp  NameAndUuid.h  NameSearch.h  NameSearch.hpp  NameSearchResult.cpp  NameSearchResult.h  NameSearchResult_impl.h  NameSearch_impl.h  PathToObject.cpp  PathToObject.h  PathToken.cpp  PathToken.h  README.md  ReferenceToObject.h  ReferenceToObject.hpp  ReferenceToObject.inl  ReferenceToObject_impl.h  ResolvedData.cpp  ResolvedData.h  ResolvedData_impl.h  ResultHolder.h  Uuid.cpp  Uuid.h  exceptions.cpp  exceptions.h  meson.build  path_cache_policies.cpp  path_cache_policies.h  path_cache_policies.hpp  types.h
src/base/thread_safe_stucts/: ThreadSafeContainer.h  ThreadSafeContainer.inl  ThreadSafeMap.h  meson.build
src/base/threads/: meson.build
src/base/type_traits/: MultiIndexRecordInfo.h  NamedMember.h  PowerCast.h  ReduceToRaw.h  Utils.h  meson.build  record_items.h
src/base/xml/: exceptions.h  meson.build  streams.h  streams_fwd.h
src/mesh_provider/: GlThreadQueue.cpp  GlThreadQueue.h  IgaProvider.cpp  IgaProvider.h  IgaProvider.hpp  MeshProvider.cpp  MeshProvider.h  MeshProvider.hpp  MeshProviderConcepts.h  MeshProvider_impl.h  OgreGismoMesh.cpp  OgreGismoMesh.h  README.md  meson.build
src/misc/: meson.build
src/misc/imgui/: ImGuiScope.cpp  ImGuiScope.h  ImGuiScope.hpp  meson.build
src/python_bindings/: SharedPtr_type_caster.h  meson.build  module.cpp  types.h
src/scene_graph/: ContainerNode.cpp  ContainerNode.h  MeshNode.cpp  MeshNode.h  NurbsNode.h  README.md  RenderingScope.h  SceneRoot.cpp  SceneRoot.h  UiState.h  forwards.h  meson.build
src/scene_graph/python_bindings/: meson.build  module.cpp  rendering_scope.cpp  rendering_scope.h  scene.cpp  scene.h
(+387 files in other folders)
