threads_src += files(
  'exceptions.cpp',
  'LockPolicy.cpp',
  'MutexData.cpp',
  'reader_locks.cpp',
  'writer_locks.cpp',
  'YesItIsAMutex.cpp',
)

headers_to_install += files(
  'exceptions.h',
  'gates.h',
  'LockedIterator.h',
  'LockPolicy.h',
  'LockPolicy.hpp',
  'MutexData.h',
  'PolicyProxy.h',
  'PolicyProxy_inl.h',
  'reader_locks.h',
  'reader_locks.hpp',
  'writer_locks.h',
  'writer_locks.hpp',
  'unreliable_mirror.h',
  'unreliable_mirror.hpp',
  'YesItIsAMutex.h',
)
