threads_src += files(
)

headers_to_install += files(
  'common_records/WeakPtrRecord.h',
  'MultiIndexContainer.h',
  'MultiIndexContainer_inl.h',
  'ThreadSafeContainer.h',
  'ThreadSafeContainer_inl.h',
  'ThreadSafeMap.h',
  'ThreadSafeMultiIndex.h',
  'ThreadSafeMultiIndex_inl.h',
  'ThreadSafeSharedPtr.h',
  'ThreadSafeSharedPtr.hpp',
  'ThreadSafeStruct.h',
  'ThreadSafeStruct.hpp',
  'ThreadSafeVector.h',
)
