geometric_primitives_src += files(
  'CoordinateSystem.cpp',
  'DeferenceableCoordinatePoints.cpp',
  'DeferenceableCoordinateSystem.cpp',
)

geometric_primitives_includes += files(
  'CoordinateSystem.h',
  'DeferenceableCoordinatePoints.h',
  'DeferenceableCoordinateSystem.h',
  'DeferenceableCoordinates.h',
)
