geometric_primitives_src += files(
  'CoordinateSystem.cpp',
  'DeferenceableCoordinatePoints.cpp',
  'DeferenceableCoordinateSystem.cpp',
)

headers_to_install += files(
  'CoordinateSystem.h',
  'DeferenceableCoordinatePoints.h',
  'DeferenceableCoordinateSystem.h',
  'DeferenceableCoordinates.h',
)
