threads_src += files(
  'exceptions.cpp',
  'LockPolicy.cpp',
  'MutexData.cpp',
  'reader_locks.cpp',
  'writer_locks.cpp',
  'YesItIsAMutex.cpp',
)

threads_includes += files(
  'exceptions.h',
  'gates.h',
  'LockedIterator.h',
  'LockPolicy.h',
  'LockPolicy_inl.h',
  'meson.build',
  'MutexData.h',
  'PolicyProxy.h',
  'PolicyProxy_inl.h',
  'reader_locks.h',
  'reader_locks_impl.h',
  'writer_locks.h',
  'writer_locks_impl.h',
  'YesItIsAMutex.h',
)
