threads_src += files(
)

threads_includes += files(
  'common_records/WeakPtrRecord.h',
  'MultiIndexContainer.h',
  'MultiIndexContainer_inl.h',
  'ThreadSafeContainer.h',
  'ThreadSafeContainer_inl.h',
  'ThreadSafeMap.h',
  'ThreadSafeMultiIndex.h',
  'ThreadSafeMultiIndex_inl.h',
  'ThreadSafeStruct.h',
  'ThreadSafeStruct_inl.h',
  'ThreadSafeVector.h',
)
